# Youtube-API-ETL

./: .gitignore  README.md  api_result.json  dagster.yaml  main.py  playlist.json  playlist_id.json  pyproject.toml  video_data.json  youTube_state.py
.dg/: telemetry.yaml
src/Youtube_API_ETL/: helper.py  resources.py
src/Youtube_API_ETL/defs/: assets.py  definitions.py  jobs.py  ops.py  sensors.py
