[project]
name = "Youtube_API_ETL"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.21",
    "dagster-postgres>=0.28.21",
    "dagster-webserver>=1.12.21",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "Youtube_API_ETL"
registry_modules = [
    "Youtube_API_ETL.components.*",
]


